force-app/main/default/objects/Crypto_Trade__c/Crypto_Trade__c.object-meta.xml
<CustomObject>
    <label>Crypto Trade</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Crypto Trade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crypto Trades</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>