force-app/main/default/objects/Crypto_Trade__c/fields/Close_Amount__c.field-meta.xml
<CustomField>
    <fullName>Close_Amount__c</fullName>
    <label>Close Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>