force-app/main/default/objects/Crypto_Trade__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Currency</label>
    <referenceTo>Currency__c</referenceTo>
    <relationshipLabel>Crypto Trades</relationshipLabel>
    <relationshipName>Crypto_Trades</relationshipName>
    <type>Lookup</type>
</CustomField>