force-app/main/default/objects/Crypto_Trade__c/fields/Open_Amount__c.field-meta.xml
<CustomField>
    <fullName>Open_Amount__c</fullName>
    <label>Open Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>