force-app/main/default/objects/Crypto_Trade__c/fields/Open_Value__c.field-meta.xml
<CustomField>
    <fullName>Open_Value__c</fullName>
    <label>Open Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>