force-app/main/default/objects/Crypto_Trade__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(  ISNULL(Close_Value__c) , &quot;Open&quot;, &quot;Closed&quot;)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>