force-app/main/default/objects/Crypto_Trade__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BTCGBP</fullName>
            </value>
            <value>
                <fullName>ETHGBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>