force-app/main/default/objects/Crypto_Trade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Open_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>